# flo

./: CMakeLists.txt
801_ConformalWillmoreFlow/flo/host/: flo_matrix_operation.hpp  flo_quaternion_operation.hpp  mean_curvature.hpp  project_basis.hpp  spin_positions.hpp  vertex_triangle_adjacency.hpp  vertex_vertex_adjacency.hpp  willmore_flow.hpp
cmake/: libigl.cmake
inputs/: untitled.blend  untitled.blend1
inputs/blender_norm/: elephant.mtl
samples/host/willmore_flow/: willmore_flow.pro
samples/host/willmore_flow/src/: CMakeLists.txt  main_v2.cpp
tutorial/: CMakeLists.txt
tutorial/801_ConformalWillmoreFlow/: main.cpp
tutorial/801_ConformalWillmoreFlow/flo/host/: divergent_edges.hpp  flo_internal.hpp  intrinsic_dirac.hpp  orthonormalize.hpp  similarity_xform.hpp  spin_xform.hpp  surface.hpp  vertex_mass.hpp  willmore_flow.cpp
tutorial/802_LaPlacian_Flow/: main.cpp
tutorial/803_decimate/: main.cpp
tutorial/804_CWFGUI/: main.cpp
